--- a/index.html
+++ b/index.html
@@ -35,117 +35,54 @@
       }
       header {
         background: linear-gradient(
-          135deg,
-          var(--green-secondary),
-          var(--green-primary)
-        );
-        color: white;
-        padding: 3rem 2rem;
-        border-radius: 12px;
-        margin-bottom: 3rem;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      }
-      h1 {
-        font-size: 2.5rem;
-        margin-bottom: 0.5rem;
-      }
-      h2 {
-        color: var(--green-dark);
-        margin: 2rem 0 1rem;
-        font-size: 1.8rem;
-      }
-      h3 {
-        color: var(--green-secondary);
-        margin: 1.5rem 0 0.8rem;
-        font-size: 1.3rem;
-      }
-      .section {
-        background: white;
-        padding: 2rem;
-        border-radius: 8px;
-        border: 1px solid var(--border);
-        margin-bottom: 2rem;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-      }
-      input,
-      select,
-      textarea {
-        width: 100%;
-        padding: 0.8rem;
-        margin: 0.5rem 0;
-        border: 1px solid var(--border);
-        border-radius: 6px;
-        background: var(--input-bg);
-        font-size: 1rem;
-        font-family: inherit;
-      }
-      input:focus,
-      select:focus,
-      textarea:focus {
-        outline: none;
-        border-color: var(--green-primary);
-        background: white;
-      }
-      button {
-        background: var(--green-primary);
-        color: white;
-        padding: 0.8rem 2rem;
-        border: none;
-        border-radius: 6px;
-        font-size: 1rem;
-        cursor: pointer;
-        font-weight: 600;
-        transition: all 0.2s;
-      }
-      button:hover {
-        background: var(--green-secondary);
-        transform: translateY(-2px);
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-      }
-      .result {
-        margin-top: 1rem;
-        padding: 1rem;
-        background: var(--input-bg);
-        border-left: 4px solid var(--green-primary);
-        border-radius: 4px;
-        white-space: pre-wrap;
-      }
-      .code {
-        background: var(--green-dark);
-        color: var(--green-light);
-        padding: 1rem;
-        border-radius: 6px;
-        overflow-x: auto;
-        font-family: "Courier New", monospace;
-        font-size: 0.9rem;
-        margin: 1rem 0;
-      }
-      .hidden {
-        display: none;
-      }
-      .form-group {
-        margin-bottom: 1rem;
-      }
-      label {
-        display: block;
-        margin-bottom: 0.5rem;
-        color: var(--text-medium);
-        font-weight: 600;
-      }
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        margin: 1rem 0;
-      }
-      table th,
-      table td {
-        padding: 0.8rem;
-        text-align: left;
-        border-bottom: 1px solid var(--border);
-      }
-      table th {
-        background: var(--green-dark);
-        color: white;
+          <!DOCTYPE html>
+          <html lang="pt">
+            <head>
+              <meta charset="UTF-8" />
+              <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+              <title>b.green API</title>
+              <style>
+                body {
+                  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+                  background: #f5f5f4;
+                  color: #234736;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  height: 100vh;
+                  margin: 0;
+                }
+                .center-box {
+                  background: #fff;
+                  padding: 2rem 3rem;
+                  border-radius: 10px;
+                  box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+                  text-align: center;
+                }
+                .admin-btn {
+                  background: #8cb161;
+                  color: #fff;
+                  border: none;
+                  border-radius: 6px;
+                  padding: 1rem 2.5rem;
+                  font-size: 1.1rem;
+                  font-weight: 600;
+                  cursor: pointer;
+                  margin-top: 1.5rem;
+                  transition: background 0.2s;
+                }
+                .admin-btn:hover {
+                  background: #426934;
+                }
+              </style>
+            </head>
+            <body>
+              <div class="center-box">
+                <h1>b.green API</h1>
+                <a href="admin.html"><button class="admin-btn">Painel de Admin</button></a>
+              </div>
+            </body>
+          </html>
         font-weight: 600;
       }
       table tr:hover {
